# todo_sync

./: .gitignore  README.md  github_schema.json  github_schema.py  pyproject.toml  sync_config.json.template  test_ariadne.py  test_github.py  todo_sync.py
github_client/: __init__.py
sync/: __init__.py
